--- a/template/package.json
+++ b/template/package.json
@@ -4,8 +4,10 @@
   "description": "{{ description }}",
   "author": "{{ author }}",
   "private": true,
+  "main":"imports/js/index.js",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev:examples": "webpack-dev-server --inline --progress --config build/webpack.examples.dev.conf.js",
     "start": "npm run dev",
     {{#if_eq runner "jest"}}
     "unit": "jest --config test/unit/jest.conf.js --coverage",
@@ -22,7 +24,8 @@
     {{#lint}}
     "lint": "eslint --ext .js,.vue src{{#unit}} test/unit{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}",
     {{/lint}}
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "build:com": "node build/build.com.js"
   },
   "dependencies": {
     "vue": "^2.5.2"{{#router}},
